# strinpy

./: pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
