[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0.0", "wheel"]

[project]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
]
description = "My really awesome package."
dynamic = ["version", "readme"]
keywords = ["strinpy"]
name = "strinpy"
requires-python = ">=3.10"
version = "0.0.1"
# ...
dependencies = []

[tool.setuptools.dynamic]
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "strinpy.__version__"}
